refactor(core): `@Configuration`을 사용한 Bean의 스캔에 대한 책임을 BeanScanner에서 분리